# rust-concurrency

./: AGENTS.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
assets/: README.md
benches/: README.md  arc_bench.rs  atomics_bench.rs  channels_bench.rs  deadlocks_bench.rs  epoch_gc_bench.rs  hazard_pointers_bench.rs  lock_free_bench.rs  memory_ordering_bench.rs  mutex_bench.rs  rwlock_bench.rs
diagrams/: 01-mutex.mmd  02-rwlock.mmd  03-atomics.mmd  04-arc.mmd  05-memory-ordering.mmd  06-deadlocks.mmd  07-channels.mmd  08-lock-free.mmd  09-hazard-pointers.mmd  10-epoch-gc.mmd  README.md
docs/: 01-mutex.md  02-rwlock.md  03-atomics.md  04-arc.md  05-memory-ordering.md  06-deadlocks.md  07-channels.md  08-lock-free.md  09-hazard-pointers.md  10-epoch-gc.md  SUMMARY.md
docs/superpowers/plans/: 2026-07-16-rust-concurrency-course.md
examples/: README.md  arc_advanced.rs  arc_basic.rs  arc_intermediate.rs  arc_real_case.rs  atomics_advanced.rs  atomics_basic.rs  atomics_intermediate.rs  atomics_real_case.rs  channels_advanced.rs  channels_basic.rs  channels_intermediate.rs  channels_real_case.rs  deadlocks_advanced.rs  deadlocks_basic.rs  deadlocks_intermediate.rs  deadlocks_real_case.rs  epoch_gc_advanced.rs  epoch_gc_basic.rs  epoch_gc_intermediate.rs  epoch_gc_real_case.rs  hazard_pointers_advanced.rs  hazard_pointers_basic.rs  hazard_pointers_intermediate.rs  hazard_pointers_real_case.rs  lock_free_advanced.rs  lock_free_basic.rs  lock_free_intermediate.rs  lock_free_real_case.rs  memory_ordering_advanced.rs  memory_ordering_basic.rs  memory_ordering_intermediate.rs  memory_ordering_real_case.rs  mutex_advanced.rs  mutex_basic.rs  mutex_intermediate.rs  mutex_real_case.rs  rwlock_advanced.rs  rwlock_basic.rs  rwlock_intermediate.rs  (+1 more)
examples/soluciones/: README.md  arc_clone_counts.rs  arc_shared_catalog.rs  arc_weak_upgrade.rs  atomics_counter_trace.rs  atomics_publish_flag.rs  atomics_record_max.rs  channels_bounded_backpressure.rs  channels_fifo_order.rs  channels_worker_pool.rs  deadlocks_lock_order.rs  deadlocks_ordered_transfer.rs  deadlocks_wait_for_cycle.rs  epoch_delayed_reclaim.rs  epoch_pin_unpin.rs  epoch_stalled_participant.rs  hazard_delayed_reclaim.rs  hazard_protect_node.rs  hazard_threshold_scan.rs  lock_free_aba_scenario.rs  lock_free_concurrent_stack.rs  lock_free_lifo_stack.rs  memory_ordering_cas.rs  memory_ordering_publish.rs  memory_ordering_relaxed_counter.rs  mutex_recover_poisoning.rs  mutex_shared_log.rs  mutex_trace_counter.rs  rwlock_read_trace.rs  rwlock_recover_poisoning.rs  rwlock_shared_catalog.rs
src/: arc.rs  atomics.rs  channels.rs  deadlocks.rs  epoch_gc.rs  hazard_pointers.rs  lib.rs  lock_free.rs  memory_ordering.rs  mutex.rs  rwlock.rs
tests/: README.md  arc_test.rs  atomics_test.rs  channels_test.rs  deadlocks_test.rs  epoch_gc_test.rs  hazard_pointers_test.rs  lock_free_test.rs  memory_ordering_test.rs  mutex_test.rs  rwlock_test.rs
