[package]
name = "rust-concurrency"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeresoftx/rust-concurrency"
description = "Concurrencia en Rust para Jeresoft Academy."
readme = "README.md"

[lib]
name = "rust_concurrency"
path = "src/lib.rs"

[dependencies]

[[example]]
name = "solution_mutex_trace_counter"
path = "examples/soluciones/mutex_trace_counter.rs"

[[example]]
name = "solution_mutex_shared_log"
path = "examples/soluciones/mutex_shared_log.rs"

[[example]]
name = "solution_mutex_recover_poisoning"
path = "examples/soluciones/mutex_recover_poisoning.rs"

[[example]]
name = "solution_rwlock_read_trace"
path = "examples/soluciones/rwlock_read_trace.rs"

[[example]]
name = "solution_rwlock_shared_catalog"
path = "examples/soluciones/rwlock_shared_catalog.rs"

[[example]]
name = "solution_rwlock_recover_poisoning"
path = "examples/soluciones/rwlock_recover_poisoning.rs"

[[bench]]
name = "mutex_bench"
harness = false

[[bench]]
name = "rwlock_bench"
harness = false
