[package]
name = "rust-concurrency"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeresoftx/rust-concurrency"
description = "Concurrencia en Rust para Jeresoft Academy."
readme = "README.md"

[lib]
name = "rust_concurrency"
path = "src/lib.rs"

[dependencies]

[[example]]
name = "solution_mutex_trace_counter"
path = "examples/soluciones/mutex_trace_counter.rs"

[[example]]
name = "solution_mutex_shared_log"
path = "examples/soluciones/mutex_shared_log.rs"

[[example]]
name = "solution_mutex_recover_poisoning"
path = "examples/soluciones/mutex_recover_poisoning.rs"

[[example]]
name = "solution_rwlock_read_trace"
path = "examples/soluciones/rwlock_read_trace.rs"

[[example]]
name = "solution_rwlock_shared_catalog"
path = "examples/soluciones/rwlock_shared_catalog.rs"

[[example]]
name = "solution_rwlock_recover_poisoning"
path = "examples/soluciones/rwlock_recover_poisoning.rs"

[[example]]
name = "solution_atomics_counter_trace"
path = "examples/soluciones/atomics_counter_trace.rs"

[[example]]
name = "solution_atomics_publish_flag"
path = "examples/soluciones/atomics_publish_flag.rs"

[[example]]
name = "solution_atomics_record_max"
path = "examples/soluciones/atomics_record_max.rs"

[[example]]
name = "solution_arc_clone_counts"
path = "examples/soluciones/arc_clone_counts.rs"

[[example]]
name = "solution_arc_shared_catalog"
path = "examples/soluciones/arc_shared_catalog.rs"

[[example]]
name = "solution_arc_weak_upgrade"
path = "examples/soluciones/arc_weak_upgrade.rs"

[[example]]
name = "solution_memory_ordering_publish"
path = "examples/soluciones/memory_ordering_publish.rs"

[[example]]
name = "solution_memory_ordering_relaxed_counter"
path = "examples/soluciones/memory_ordering_relaxed_counter.rs"

[[example]]
name = "solution_memory_ordering_cas"
path = "examples/soluciones/memory_ordering_cas.rs"

[[example]]
name = "solution_deadlocks_lock_order"
path = "examples/soluciones/deadlocks_lock_order.rs"

[[example]]
name = "solution_deadlocks_wait_for_cycle"
path = "examples/soluciones/deadlocks_wait_for_cycle.rs"

[[example]]
name = "solution_deadlocks_ordered_transfer"
path = "examples/soluciones/deadlocks_ordered_transfer.rs"

[[example]]
name = "solution_channels_fifo_order"
path = "examples/soluciones/channels_fifo_order.rs"

[[example]]
name = "solution_channels_bounded_backpressure"
path = "examples/soluciones/channels_bounded_backpressure.rs"

[[example]]
name = "solution_channels_worker_pool"
path = "examples/soluciones/channels_worker_pool.rs"

[[example]]
name = "solution_lock_free_lifo_stack"
path = "examples/soluciones/lock_free_lifo_stack.rs"

[[example]]
name = "solution_lock_free_aba_scenario"
path = "examples/soluciones/lock_free_aba_scenario.rs"

[[example]]
name = "solution_lock_free_concurrent_stack"
path = "examples/soluciones/lock_free_concurrent_stack.rs"

[[example]]
name = "solution_hazard_protect_node"
path = "examples/soluciones/hazard_protect_node.rs"

[[example]]
name = "solution_hazard_delayed_reclaim"
path = "examples/soluciones/hazard_delayed_reclaim.rs"

[[example]]
name = "solution_hazard_threshold_scan"
path = "examples/soluciones/hazard_threshold_scan.rs"

[[bench]]
name = "mutex_bench"
harness = false

[[bench]]
name = "rwlock_bench"
harness = false

[[bench]]
name = "atomics_bench"
harness = false

[[bench]]
name = "arc_bench"
harness = false

[[bench]]
name = "memory_ordering_bench"
harness = false

[[bench]]
name = "deadlocks_bench"
harness = false

[[bench]]
name = "channels_bench"
harness = false

[[bench]]
name = "lock_free_bench"
harness = false

[[bench]]
name = "hazard_pointers_bench"
harness = false
